--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "bootstrap": "^5.3.5",
     "express": "^5.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
